# i18n-timezones-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
data/: ar.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  eu.json  fi.json  fr.json  he.json  hi.json  hr.json  hu.json  id.json  it.json  ja.json  ko.json  ms.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sq.json  sv.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
scripts/: sync-data.sh
src/: lib.rs  registry.rs
tests/: integration_test.rs
